--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,23 @@ code {
 }
 a {
   text-decoration: none;
+  color: white;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 80%;
+  margin: 0 auto;
+  border: 1px solid black;
+  box-shadow: 1px 1px 4px black;
 }
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: rgb(81, 81, 81);
+  color: white;
 }
 .nav-links {
   width: 40%;
@@ -28,6 +40,11 @@ a {
 }
 .banner {
   height: 50vh;
+  background-image: url("../Assets/Pizza.jpg") ;
+}
+.form-img{
+  height: 50vh;
+  width: 100%;
   background-image: url("../Assets/Pizza.jpg") ;
 }
 .title-link{
